--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -159,7 +159,7 @@
                       d="M21 12v7a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h11"
                     ></path>
                   </svg>
-                  <span class="text-[#BBE1FA]/90"
+                  <span class="text-[#BBE1FA]/90 text-md"
                     >Reportes para toma de decisiones informadas</span
                   >
                 </li>
@@ -200,14 +200,6 @@
               rel="noopener noreferrer"
             >
               Ver Demo
-            </a>
-            <a
-              href="#"
-              class="border border-[#3282B8] text-[#BBE1FA] text-sm font-medium py-1.5 px-4 rounded"
-              target="_blank"
-              rel="noopener noreferrer"
-            >
-              Ver Código
             </a>
           </div>
         </div>
@@ -310,7 +302,7 @@
 
           <div class="flex gap-2 mt-auto">
             <a
-              href="#"
+              href="https://invitation-xv.vercel.app/"
               target="_blank"
               rel="noopener noreferrer"
               class="bg-[#3282B8]/80 text-[#BBE1FA] text-sm font-medium py-1.5 px-3 rounded"
@@ -318,7 +310,7 @@
               Ver Demo
             </a>
             <a
-              href="#"
+              href="https://github.com/JROBLES9/invitationXV"
               target="_blank"
               rel="noopener noreferrer"
               class="border border-[#3282B8]/60 text-[#BBE1FA] text-sm font-medium py-1.5 px-3 rounded"
